--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -24,7 +24,7 @@ body {
     -webkit-background-size: 100% 100%;
     background-size:cover;	
 	background-repeat: no-repeat;
-	background-image: url("$lib/images/blob.svg");
+	background-image: url("$lib/images/stacked-waves.svg");
 }
 
 h1,
